# ai-nebius-git-summarize

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/cc10x/: activeContext.md  patterns.md  progress.md
_v1-claude-code-pure/: README.md  main.py
admission_test/_v1-claude-code-pure/: pyproject.toml
admission_test/app/: models.py
admission_test/app/services/: github_client.py
admission_test/tests/: test_models.py
ai_model_2_ai_product/: README.md
ai_model_2_ai_product/Assignments/1/: assignment_01.ipynb  assignment_01.xlsx  plan.md
ai_model_2_ai_product/Assignments/1/src/: config.py  generator.py  judge.py  rubric.py
ai_product/: README.md
app/: config.py  main.py
app/routers/: summarize.py
app/services/: summarizer.py
app/utils/: file_filter.py
docs/plans/: 2026-02-21-github-repo-summarizer-plan.md
llm_architecture/: Ngram_Language_Model_with_NLTK.ipynb
llm_architecture/Assignments/1/: 02_LLM_Architectures,_hometask_1.ipynb  Assignment_01_product_dataset.xlsx
llm_architecture/Course/: 02_TextClassification.ipynb
oltp/: FCP_Architecture_Evaluation.html  FCP_Architecture_Evaluation.md  FCP_Architecture_Flow_Diagram.html  FCP_Architecture_Flow_Diagram.md  FCP_Databricks_Review.html  FCP_Databricks_Review.md
tests/: test_api.py  test_file_filter.py  test_github_client.py  test_summarizer.py
